angular material working with prebuilt theme

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="https://unpkg.com/@progress/kendo-theme-material@latest/dist/all.css">
 	</link>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet">
+	<link href="node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
 
 	<style>
 		body {
